# bmcs_matmod

./: .gitignore  GSM_REGISTRY_UNIFICATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  aiida_response_data_retrieval.py  bmcs_matmod.yml  comparison_test.py  debug_import.py  environment.yml  gsm_cli_shell.sh  gsm_cli_wrapper.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  simulation_example_results.json  test_cli_imports.py  test_gsm_import.py  test_real_simulations.sh  test_registry.py  test_remote_client.py  validate_reorganization.py  version.py  wassim_test.txt
bmcs_matmod/: __init__.py  api.py  version.py
bmcs_matmod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bmcs_matmod/aiida_plugins/: README_AiiDA_Integration.md  __init__.py  calculations.py  data.py  debug_calcjob_data_transfer.ipynb  example_aiida_integration.py  exporters.py  parsers.py  test_gsm_aiida_integration.ipynb  validate_aiida_installation.py  workchains.py
bmcs_matmod/design_description/: 01_gsm_presentation_framework.md  02_gsm_presentation_framework_refined.md  03_gsm_presentation_framework_refined_aiida.md  04_gsm_presentation_framework_parametric_tools_comparison.md  05_material_research_management_platform_recommendation.md  06_structural_member_design_IRD_platform_recommendation.md  07_aiida_and_project_management.md  08_open_source_project_management.md  09_open_source_project_management_openproject_comparison.md  10_lims_eln_review.md  11_material_research_process_uml.puml  12_material_research_process_uml_activity_example.puml  13_material_research_process_refined_activity.md  13_material_research_process_refined_activity.puml  14_material_research_process_state_diagram.puml  14_material_research_process_state_diagram_explanation.md  15_aiida_for_parallel_binder_characterization.md  16_gsm_aiida_integration_architecture.md  17_fatrescon_workchain_architecture.md  18_fatrescon_development_scenarios_aiidalab_local.md  aiida_material_research_workflow_example.ipynb  openproject.txt
bmcs_matmod/gsm/: __init__.py  gsm.py  gsm_I.py  gsm_mpdp.py  gsm_nr.py  gsm_plot.py  gsm_residuum.py  gsm_response.py  gsm_rm.py  gsm_run.py  gsm_scratch.ipynb  gsm_symb.py  symb_expr.ipynb  symb_expr.py  symb_expr2.py  symb_expr3.py
bmcs_matmod/gsm_lagrange/: CLI_README.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  cli_clean.py  cli_gsm.ipynb  cli_gsm.py  cli_gsm_fixed.py  cli_interface.py  cli_production.py  data_structures.py  debug_discovery.py  demo_cli.py  demo_systematic_cli.py  enhanced_cli.py  gpt_discussion.md  gsm1d_ed.py  gsm1d_ep.py  gsm1d_epd.py  gsm1d_evp.py  gsm1d_evpd.py  gsm1d_ve.py  gsm1d_ved.py  gsm1d_vevp.py  gsm1d_vevpd.py  gsm_base.py  gsm_def.py  gsm_def_registry.py  gsm_engine.py  gsm_lagrange.puml  gsm_material_model.ipynb  gsm_material_model.py  gsm_material_model_notebook.py  gsm_model.ipynb  gsm_model.py  gsm_vars.py  material.py  material_params.py  minimal_cli_gsm.py  model_registry.py  (+10 more)
bmcs_matmod/mats_base/: mats_base.py
bmcs_matmod/microplane_model_comparison/: microplanes.py  pasticity_damage_material_law-2.ipynb  pasticity_damage_material_law.ipynb
bmcs_matmod/ms1/: Micro2Dplot.py  TODO.md  __init__.py  concrete_material_db.py  ms1.py  ms1_eeq_explicit.py  ms1_sigma_int.py  ms1_sigma_pvw.py  ms1_sigma_pvw_regularized.py  ms_generic.py  uniaxial_fatigue_simulator_dc_mario2D_FraMCos.py  uniaxial_fatigue_simulator_dc_mario3D_FraMCos.py  uniaxial_fatigue_simulator_mario2D_FraMCos.py  uniaxial_fatigue_simulator_mario3D_FraMCos.py  vmats2D_mpl_csd_eeq.py  vmats3D_mpl_csd_eeq.py
bmcs_matmod/msx/: __init__.py  energy_dissipation.py  ms_integ_schemes.py  msx.py
bmcs_matmod/ntim/: __init__.py  exceptions.py  i_ntim.py  ntim.py  tevpd_ifc.py  vcontim.py  vdntim.py  vuntim.py  vuntim_m.py
bmcs_matmod/plot/: __init__.py  fatigue_animator.py  tevpd_ifc_plot.py
bmcs_matmod/slide/: README.md  cymbol.ipynb  cymbol.py  energy_dissipation.py  f_double_cap.ipynb  f_double_cap.py  inel_state_evolution.py  scontim.py  slide_32.ipynb  slide_32.py  slide_34.py  slide_explorer.ipynb  slide_explorer.py  vcontim.py  vslide_34.ipynb  vslide_34.py  vslide_34_TN_axisym.py  vslide_34_ij.py  vslide_34_ws.py  vslide_35.py
bmcs_matmod/time_fn/: __init__.py  new_time_fn.py  time_fn.ipynb  time_fn.puml  time_fn.py  time_fn_demo.ipynb  time_function.ipynb  time_function.py
bmcs_matmod/time_function/: README.md  __init__.py  time_fn.ipynb  time_fn.puml
bmcs_matmod/widgets/: response_data_widget.py
examples/: two_level_data_architecture_demo.py
matmod/mats_base/: __init__.py
matmod/ms1/: Micro2Dplot.py  coding_conventions.md  time_function.py  uniaxial_fatigue_simulator_dc_mario2D_FraMCos.py  uniaxial_fatigue_simulator_dc_mario3D_FraMCos.py  uniaxial_fatigue_simulator_mario2D_FraMCos.py  uniaxial_fatigue_simulator_mario3D_FraMCos.py  vmats2D_mpl_csd_eeq.py  vmats3D_mpl_csd_eeq.py  vmatsXD_mpl_csd_eeq.py
notebooks/: 03_gsm_widget_framework.ipynb  aiida_integration_strategies.ipynb  debug_ms_gen.ipynb  gsm_lagrange_aiida_demo.ipynb  gsm_simulation_results_20250629_205307.json  response_data.ipynb
time_fn/: time_fn.py  time_function.ipynb  time_function.py
uml/: new_time_fn.puml
(+411 files in other folders)
